tests/reject/ambiguousOverload1.emojic
🐇 🐟 🍇
  🖍🆕 name 🔶🏠🔡

  🆕🍼 name 🔶🏠🔡 🍇🍉

  ❗️ 🙋 a 🔢 b 🍬🔢 🍇
    😀🔤normal🔤❗️
  🍉

  ❗️ 🙋 a 🍬🔢 b 🔢 🍇
    😀🔤optional🔤❗️
  🍉
🍉

🏁 🍇
  🆕🐟 🔤Shawn🔤❗️ ➡️ a

  🙋a 23 13❗️
🍉
